--- a/package.json
+++ b/package.json
@@ -38,17 +38,18 @@
     "@lexical/selection": "0.18.0",
     "@lexical/utils": "0.18.0",
     "@next/bundle-analyzer": "^13.4.2",
-    "@payloadcms/db-mongodb": "3.0.0-beta.120",
-    "@payloadcms/email-nodemailer": "3.0.0-beta.120",
-    "@payloadcms/live-preview-react": "3.0.0-beta.120",
-    "@payloadcms/next": "3.0.0-beta.120",
-    "@payloadcms/plugin-form-builder": "3.0.0-beta.120",
-    "@payloadcms/plugin-nested-docs": "3.0.0-beta.120",
-    "@payloadcms/plugin-redirects": "3.0.0-beta.120",
-    "@payloadcms/plugin-seo": "3.0.0-beta.120",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.120",
-    "@payloadcms/storage-vercel-blob": "3.0.0-beta.120",
-    "@payloadcms/ui": "3.0.0-beta.120",
+    "@payloadcms/db-mongodb": "3.0.0-beta.133",
+    "@payloadcms/email-nodemailer": "3.0.0-beta.133",
+    "@payloadcms/live-preview-react": "3.0.0-beta.133",
+    "@payloadcms/next": "3.0.0-beta.133",
+    "@payloadcms/plugin-form-builder": "3.0.0-beta.133",
+    "@payloadcms/plugin-nested-docs": "3.0.0-beta.133",
+    "@payloadcms/plugin-redirects": "3.0.0-beta.133",
+    "@payloadcms/plugin-seo": "3.0.0-beta.133",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.133",
+    "@payloadcms/storage-s3": "3.0.0-beta.133",
+    "@payloadcms/storage-vercel-blob": "3.0.0-beta.133",
+    "@payloadcms/ui": "3.0.0-beta.133",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-portal": "^1.1.2",
     "@splinetool/react-spline": "^4.0.0",
