--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@payloadcms/plugin-redirects": "^3.0.0",
     "@payloadcms/plugin-seo": "^3.0.0",
     "@payloadcms/richtext-lexical": "^3.0.0",
+    "@payloadcms/storage-s3": "^3.0.2",
     "@payloadcms/storage-vercel-blob": "^3.0.0",
     "@payloadcms/ui": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.1",
