--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@payloadcms/plugin-redirects": "3.12.1-canary.7fea7e5",
     "@payloadcms/plugin-seo": "3.12.1-canary.7fea7e5",
     "@payloadcms/richtext-lexical": "3.12.1-canary.7fea7e5",
+    "@payloadcms/storage-s3": "^3.0.2",
     "@payloadcms/storage-vercel-blob": "3.12.1-canary.7fea7e5",
     "@payloadcms/ui": "3.12.1-canary.7fea7e5",
     "@radix-ui/react-accordion": "^1.2.1",
