--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@payloadcms/plugin-redirects": "3.42.0",
     "@payloadcms/plugin-seo": "3.42.0",
     "@payloadcms/richtext-lexical": "3.42.0",
+    "@payloadcms/storage-s3": "3.42.0",
     "@payloadcms/storage-vercel-blob": "3.42.0",
     "@payloadcms/ui": "3.42.0",
     "@radix-ui/react-accordion": "^1.2.1",
